--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,12 @@
+@import 'settings/theme.css';
 @import 'settings/typography.css';
 
+@import 'generic/focus.css';
 @import 'generic/reset.css';
 
+@import 'elements/anchor.css';
 @import 'elements/body.css';
+@import 'elements/bold.css';
 @import 'elements/heading.css';
 @import 'elements/list.css';
 @import 'elements/paragraph.css';
@@ -10,6 +14,6 @@
 @import 'components/activity-list.css';
 @import 'components/header.css';
 @import 'components/layout.css';
+@import 'components/section.css';
 @import 'components/skill-list.css';
-@import 'components/skill.css';
 @import 'components/visually-hidden.css';
