--- a/src/styles/elements/body.css
+++ b/src/styles/elements/body.css
@@ -1,5 +1,6 @@
 body {
-  margin: 1rem;
+  background-color: #fff;
+  color: #333;
 
   font-family: var(--font-family-default);
   line-height: 1.5;
