--- a/src/styles/elements/heading.css
+++ b/src/styles/elements/heading.css
@@ -1,23 +1,23 @@
 h1 {
-  margin: 0;
-
   font-family: var(--font-family-serif);
   font-size: 2rem;
-  line-height: 1;
+  line-height: 2rem;
 }
 
 h2 {
-  margin: 0;
-
   font-size: 1rem;
-  line-height: 1;
+  line-height: 1rem;
 }
 
 h3 {
-  margin: 0;
-
   font-family: var(--font-family-serif);
   font-size: 1.5rem;
   font-weight: 300;
   line-height: 2rem;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0;
+
+  color: var(--theme-color-heading);
 }
