--- a/src/styles/settings/theme.css
+++ b/src/styles/settings/theme.css
@@ -2,5 +2,5 @@
   --theme-color-background: #fff;
   --theme-color-heading: #222;
   --theme-color-text: #333;
-  --theme-color-text--active: #4cf;
+  --theme-color-text--active: #0ac;
 }
