--- a/src/styles/components/section.css
+++ b/src/styles/components/section.css
@@ -1,27 +1,33 @@
 .section {
   display: grid;
+  gap: 1rem;
   margin-block-end: 2rem;
 
   background-color: var(--theme-color-background);
-  color: var(--theme-color-text);
+}
+
+.section__title {
+  margin-bottom: 1rem;
 }
 
 @media screen {
   .section {
     padding: 4rem;
     margin-block-end: 0;
-  }
 
-  .section:nth-child(even) {
-    --theme-color-background: #fafafa;
-    --theme-color-heading: #000;
-    --theme-color-text: #000;
+    &:nth-child(even) {
+      --theme-color-background: #fafafa;
+    }
   }
 }
 
-@media (min-width: 32rem) {
+@media (--breakpoint-small) {
   .section {
-    gap: 4rem;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 20ch 1fr;
+  }
+
+  .section__title {
+    font-size: 1rem;
+    line-height: 2rem;
   }
 }
