--- a/src/styles/elements/list.css
+++ b/src/styles/elements/list.css
@@ -1,6 +1,7 @@
 ol, ul {
-  padding-inline-start: 1rem;
   margin-block-start: 1rem;
+  padding-inline: 0;
+  list-style-position: inside;
 }
 
 dl {
