--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -1,5 +1,18 @@
 .header {
+  display: grid;
+  gap: 2rem;
+
   padding-block: 2rem;
+
+  & dl {
+    display: grid;
+    grid-template-columns: repeat(3, max-content);
+    gap: 1rem;
+  }
+
+  & dd {
+    margin-block-end: 0;
+  }
 }
 
 .header__content {
@@ -16,8 +29,8 @@
   }
 }
 
-@media (min-width: 60rem) {
+@media (--breakpoint-medium) {
   .header {
-    margin-block-end: 2rem;
+    grid-template-columns: minmax(max-content, 1fr) max-content;
   }
 }
