--- a/src/styles/elements/anchor.css
+++ b/src/styles/elements/anchor.css
@@ -1,9 +1,9 @@
 a {
   color: var(--theme-color-text);
-}
 
-a:hover,
-a:focus {
-  color: var(--theme-color-text--active);
-  text-decoration: none;
+  &:hover,
+  &:focus {
+    color: var(--theme-color-text--active);
+    text-decoration: none;
+  }
 }
