--- a/src/styles/settings/typography.css
+++ b/src/styles/settings/typography.css
@@ -1,3 +1,12 @@
 :root {
   --font-family-default: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+
+  font-size: 100%;
 }
+
+@media print {
+  :root {
+    font-size: 80%;
+  }
+}
+
